//
// Protocol buffers definition
//
syntax = "proto3";
package pt.tecnico.rec.grpc;
option java_multiple_files = true;

message CtrlPingRequest {
  string input = 1;
}

message CtrlPingResponse {
	string output = 1;
}

message ReadRequest {
  string name = 1;
}

message ReadResponse {
  oneof value {
    string stringValue = 1;
    int32 intValue = 2;
  }
}

message WriteRequest {
  string name = 1;
  int32 intValue = 2;

}

message WriteResponse {
  //this string will return the state of the write operation OK/ERROR
  string response = 1;
}

service Record {
  rpc ctrl_ping (CtrlPingRequest) returns (CtrlPingResponse);
  rpc read (ReadRequest) returns (ReadResponse);
  rpc write (WriteRequest) returns (WriteResponse);
}
